--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -342,7 +342,7 @@ in 4.3.1 need use order and offset
         <div class="pg3ShapeTxtTop">
           <h1> My Favourite Projects </h1>
         </div>
-        <div class="bestCardsContainer container text-center"><!--rows should always be in containers column in row and a div in column before anything else-->
+        <div class="container bestCardsContainer "><!--rows should always be in containers column in row and a div in column before anything else-->
           <!--container needs to be centered and contents-->
           <!--order effects order they collapse to no more useful that actually putting them in that order think would be more useful for grabbing with jq-->
           <!--should order for mobile then push and pull for desktop-->
