clickable hyperlinked array length database produced icons

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -131,7 +131,7 @@ maybe even ajoining a space for the marble
 
           <div class="aCard">
             <div class="topRightProjectTechnologiesArea">
-              <% for (let i = 0; i<page2BestCard.technologiesArray.length; i++) { %>
+              <% for (let i = 0; i<page3FourthBestCard.technologiesArray.length; i++) { %>
 
 
              <Img class="cardHyperlinksImg" src= <%=page3FourthBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
