--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1250,6 +1250,17 @@ when refactor set the h's to the same font but different font sizes and have thi
 
 /*////////////////// CARD STYLES ///////////////////////*/
 
+.submitButtonNoStyle{
+  background:none;
+  color:inherit;
+  border:none;
+  padding:0;margin:0;
+  font:inherit;
+  outline:inherit;
+  width: 19px;
+  height:15px;/*inherit;*/
+}
+
 .aCard{
   background:beige;
 
@@ -1270,18 +1281,22 @@ margin:0 auto;
   background:lightCyan;
   margin:0.5px 5px;
   padding:2px 0;
-
+max-height:150px;
 
 
   overflow:hidden;
 }
-
+/*so if you making the form have a larger margin find actually the button is triggered up to 10px below
+but there are no boxed ending there on pesticide so i think it is the button click area, some reading suggests can effect it with whether elements are inline block etc or text aligned for position
+im going to leave it till later*/
+.formTechBtn{margin: 0 0 2px 0; padding:0; width:19px; height:15px;}
 .technologyButtonImg{
   display: block;
   width:15px;
   height:15px;
   overflow:hidden;
   padding:0;margin:0 auto;
+
 }
 
 .technologyButton img{
@@ -1358,14 +1373,15 @@ padding:0;
 }
 .cardHyperlinksImg{
 
-width:inherit;
+width:15px;
 height:15px;
-display: block-inline;
+display: inline;
 margin-left: auto;
 margin-right: auto;
   overflow:hidden;
 
 vertical-align: top;
+  border-radius:50%;
 }
 
 .cardHyperlinkImg img{
