--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -400,7 +400,10 @@ in 4.3.1 need use order and offset
                                 <% for (let i = 0; i<page3SecondBestCard.technologiesArray.length; i++) { %>
 
 
-                               <Img class="cardHyperlinksImg" src= <%=page3SecondBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
+
+
+                                  <img type="image" class="cardHyperlinksImg" src= <%=page3SecondBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
+
 <% }%>
                           </div>
 
@@ -436,8 +439,13 @@ in 4.3.1 need use order and offset
                                <!--loop throough the number of tech items-->
                                                                <% for (let i = 0; i<page3ThirdBestCard.technologiesArray.length; i++) { %>
 
+<form class="formTechBtn" action="/carousel" method="get">
 
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value=<%= page3ThirdBestCard.technologiesArray[i].technologyName %> >
                                                               <Img class="cardHyperlinksImg" src= <%=page3ThirdBestCard.technologiesArray[i].technologyImagePath %> alt="gitLink">
+</button>
+</form>
+
                                <% }%></div>
 
 
