pg4 the loop builds the string taking variables for all card features. the links work only for bottom right cards so their click boxes must be covered a bit. Next need loops to put in the buttons. then do it from an JSON object

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -29,13 +29,21 @@
 <!--put no scroll back in later-->
 <!--class="no Scroll"-->
 <!--
+
 <body >
   <h6>  <%=page2BestCard.projectName   %> </h6>
   <h2>  <%= page3SecondBestCard.overallProjectRating  %>  </h2>
   <h5>  <%= page3ThirdBestCard.projectDescription  %>  </h5>
   <h4>  <%= page3FourthBestCard.projectImage  %>   </h4>
 -->
+
+<body >
+
+
 <button class="test">ClickMe</button>
+
+
+
 
   <div class="grayUntilJQueryLoads"></div>
   <!--the marble case works here for now but needs to go in section eventually
@@ -607,7 +615,9 @@ http://xahlee.info/comp/unicode_arrows.html
 
   <script src="Javascript/testCode.js" charset="utf-8"></script>
 
-
+  <!--
+  <script src="Javascript/dummyData.js" charset="utf-8"></script>
+-->
 
 
 </body>
