--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1239,12 +1239,14 @@ when refactor set the h's to the same font but different font sizes and have thi
 }
 
 .cardPG4{
-  width:150px;
-  height:200px;
+  width:125px;
+  height:150px;
   margin:0px 10px 10px;
   background-color:lightCyan;
   font-size:5rem;
   position:absolute;
+  border:2.5px;
+  border-radius:5px;
 
 }
 
