--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -1374,14 +1374,17 @@ margin-right: auto;
 padding:0 ;
   overflow:hidden;
   vertical-align: top;
+  text-align: left;
+  font-size:0;
 }
 .cardHyperlinksImg{
 
 width:15px;
 height:15px;
 display: inline;
-margin-left: auto;
-margin-right: auto;
+font-size:0;
+/*margin-left: auto;
+margin-right: auto;*/
   overflow:hidden;
 
 vertical-align: top;
@@ -1393,6 +1396,14 @@ vertical-align: top;
   max-width: 100%;
   max-height: 100%;}
 
+a{
+
+  display:inline-block;margin:0; padding:0;text-align: left; height:inherit;font-size:inherit;
+/*
+  width:15px;
+  height:15px;
+*/
+}
 /*/////////// Testing*/
 .dot{
   position: absolute;
