backend still needs to pass data to pg4 but pg4 now receives data in the way the model produces it

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -614,7 +614,7 @@ http://xahlee.info/comp/unicode_arrows.html
   <script src="Javascript/pg4.js" charset="utf-8"></script>
 
   <script src="Javascript/testCode.js" charset="utf-8"></script>
-
+  <script src="Javascript/dummyData.js" charset="utf-8"></script>
   <!--
   <script src="Javascript/dummyData.js" charset="utf-8"></script>
 -->
