--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -77,6 +77,10 @@ maybe making it inline but not sure thats really the issues
 also cause a white space at bottom because now contributes to the height-->
   <!--wheren section has content it tries to be part of initial view screen-->
 
+<section class="carouselOverlay">
+  <div class="carouselOverlayBackground"></div>
+  
+</section>
 
   <section class="page2X0Y1 ">
     <!--something i read said use button because comes with lots of good defaults but im struggling with them-->
