--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -78,11 +78,25 @@ also cause a white space at bottom because now contributes to the height-->
   <!--wheren section has content it tries to be part of initial view screen-->
 
 <section class="carouselOverlay">
+
   <div class="carouselOverlayBackground"></div>
-  
+  <div id="carousel">
+  <div class="cloud9-item">
+</div>
+
+<div id="buttons">
+  <button class="left">
+    ←
+  </button>
+  <button class="right">
+    →
+  </button>
+</div>
+
 </section>
 
   <section class="page2X0Y1 ">
+
     <!--something i read said use button because comes with lots of good defaults but im struggling with them-->
     <!--want an arrow that underlines text-->
 
@@ -616,6 +630,11 @@ http://xahlee.info/comp/unicode_arrows.html
   <script src="Javascript/pg2.js" charset="utf-8"></script>
   <script src="Javascript/pg3.js" charset="utf-8"></script>
   <script src="Javascript/pg4.js" charset="utf-8"></script>
+
+<script src="Javascript/jquery.cloud9carousel.js" charset="utf-8"></script>
+<script src="Javascript/carousel.js" charset="utf-8"></script>
+
+
 
   <script src="Javascript/testCode.js" charset="utf-8"></script>
   <script src="Javascript/dummyData.js" charset="utf-8"></script>
