bound keys, hidden open and close to the carousel

--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -77,21 +77,285 @@ maybe making it inline but not sure thats really the issues
 also cause a white space at bottom because now contributes to the height-->
   <!--wheren section has content it tries to be part of initial view screen-->
 
-<section class="carouselOverlay">
+
+<section class="carouselOverlay  carouselDisplayNone"   > <!--carouselDisplayNone causes the cards to be in wrong place-->
 
   <div class="carouselOverlayBackground"></div>
-  <div id="carousel">
-  <div class="cloud9-item">
-</div>
 
-<div id="buttons">
-  <button class="left">
-    ←
+
+<div class="wrap">
+  <div id="showcase" class="noselect">
+    <div class="cloud9-item">
+                              <div class="aCard">
+                                <div class="topRightProjectTechnologiesArea">
+          <form class="formTechBtn" action="/carousel" method="get">
+            <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                                                  <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+    </button>
+    </form>
+                                        </div>
+
+                                <div class="aCardWritingArea">
+                                      <div class="projectTitle">"Project"</div>
+                                              <img class="projectImage " src="" alt="projectImg">
+                                       <div class="projectDescriptionSubtitle">Description</div>
+                                       <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+                                  </div>
+                                   <div class="cardHyperlinksArea">
+                                         <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+                                    </div>
+                        </div>
+    </div>
+
+    <div class="cloud9-item">
+      <div class="aCard">
+        <div class="topRightProjectTechnologiesArea">
+  <form class="formTechBtn" action="/carousel" method="get">
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
   </button>
-  <button class="right">
-    →
+  </form>
+                </div>
+
+        <div class="aCardWritingArea">
+              <div class="projectTitle">"Project"</div>
+                      <img class="projectImage " src="" alt="projectImg">
+               <div class="projectDescriptionSubtitle">Description</div>
+               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+          </div>
+           <div class="cardHyperlinksArea">
+                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+            </div>
+  </div>
+    </div>
+    <div class="cloud9-item">
+      <div class="aCard">
+        <div class="topRightProjectTechnologiesArea">
+  <form class="formTechBtn" action="/carousel" method="get">
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+  </button>
+  </form>
+                </div>
+
+        <div class="aCardWritingArea">
+              <div class="projectTitle">"Project"</div>
+                      <img class="projectImage " src="" alt="projectImg">
+               <div class="projectDescriptionSubtitle">Description</div>
+               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+          </div>
+           <div class="cardHyperlinksArea">
+                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+            </div>
+  </div>
+    </div>
+    <div class="cloud9-item">
+      <div class="aCard">
+        <div class="topRightProjectTechnologiesArea">
+  <form class="formTechBtn" action="/carousel" method="get">
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+  </button>
+  </form>
+                </div>
+
+        <div class="aCardWritingArea">
+              <div class="projectTitle">"Project"</div>
+                      <img class="projectImage " src="" alt="projectImg">
+               <div class="projectDescriptionSubtitle">Description</div>
+               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+          </div>
+           <div class="cardHyperlinksArea">
+                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+            </div>
+  </div>
+    </div>
+    <div class="cloud9-item">
+      <div class="aCard">
+        <div class="topRightProjectTechnologiesArea">
+  <form class="formTechBtn" action="/carousel" method="get">
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+  </button>
+  </form>
+                </div>
+
+        <div class="aCardWritingArea">
+              <div class="projectTitle">"Project"</div>
+                      <img class="projectImage " src="" alt="projectImg">
+               <div class="projectDescriptionSubtitle">Description</div>
+               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+          </div>
+           <div class="cardHyperlinksArea">
+                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+            </div>
+  </div>
+    </div>
+    <div class="cloud9-item">
+      <div class="aCard">
+        <div class="topRightProjectTechnologiesArea">
+  <form class="formTechBtn" action="/carousel" method="get">
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+  </button>
+  </form>
+                </div>
+
+        <div class="aCardWritingArea">
+              <div class="projectTitle">"Project"</div>
+                      <img class="projectImage " src="" alt="projectImg">
+               <div class="projectDescriptionSubtitle">Description</div>
+               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+          </div>
+           <div class="cardHyperlinksArea">
+                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+            </div>
+  </div>
+    </div>
+    <div class="cloud9-item">
+      <div class="aCard">
+        <div class="topRightProjectTechnologiesArea">
+  <form class="formTechBtn" action="/carousel" method="get">
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+  </button>
+  </form>
+                </div>
+
+        <div class="aCardWritingArea">
+              <div class="projectTitle">"Project"</div>
+                      <img class="projectImage " src="" alt="projectImg">
+               <div class="projectDescriptionSubtitle">Description</div>
+               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+          </div>
+           <div class="cardHyperlinksArea">
+                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+            </div>
+  </div>
+    </div>
+    <div class="cloud9-item">
+      <div class="aCard">
+        <div class="topRightProjectTechnologiesArea">
+  <form class="formTechBtn" action="/carousel" method="get">
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+  </button>
+  </form>
+                </div>
+
+        <div class="aCardWritingArea">
+              <div class="projectTitle">"Project"</div>
+                      <img class="projectImage " src="" alt="projectImg">
+               <div class="projectDescriptionSubtitle">Description</div>
+               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+          </div>
+           <div class="cardHyperlinksArea">
+                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+            </div>
+  </div>
+    </div>
+    <div class="cloud9-item">
+      <div class="aCard">
+        <div class="topRightProjectTechnologiesArea">
+  <form class="formTechBtn" action="/carousel" method="get">
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+  </button>
+  </form>
+                </div>
+
+        <div class="aCardWritingArea">
+              <div class="projectTitle">"Project"</div>
+                      <img class="projectImage " src="" alt="projectImg">
+               <div class="projectDescriptionSubtitle">Description</div>
+               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+          </div>
+           <div class="cardHyperlinksArea">
+                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+            </div>
+  </div>
+    </div>
+    <div class="cloud9-item">
+      <div class="aCard">
+        <div class="topRightProjectTechnologiesArea">
+  <form class="formTechBtn" action="/carousel" method="get">
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+  </button>
+  </form>
+                </div>
+
+        <div class="aCardWritingArea">
+              <div class="projectTitle">"Project"</div>
+                      <img class="projectImage " src="" alt="projectImg">
+               <div class="projectDescriptionSubtitle">Description</div>
+               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+          </div>
+           <div class="cardHyperlinksArea">
+                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+            </div>
+  </div>
+    </div>
+    <div class="cloud9-item">
+      <div class="aCard">
+        <div class="topRightProjectTechnologiesArea">
+  <form class="formTechBtn" action="/carousel" method="get">
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+  </button>
+  </form>
+                </div>
+
+        <div class="aCardWritingArea">
+              <div class="projectTitle">"Project"</div>
+                      <img class="projectImage " src="" alt="projectImg">
+               <div class="projectDescriptionSubtitle">Description</div>
+               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+          </div>
+           <div class="cardHyperlinksArea">
+                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+            </div>
+  </div>
+    </div>
+    <div class="cloud9-item">
+      <div class="aCard">
+        <div class="topRightProjectTechnologiesArea">
+  <form class="formTechBtn" action="/carousel" method="get">
+  <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                          <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+  </button>
+  </form>
+                </div>
+
+        <div class="aCardWritingArea">
+              <div class="projectTitle">"Project"</div>
+                      <img class="projectImage " src="" alt="projectImg">
+               <div class="projectDescriptionSubtitle">Description</div>
+               <div class="projectDescriptionText">Desciption jhfkaujhkjdshfjkdashf</div>
+          </div>
+           <div class="cardHyperlinksArea">
+                 <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+            </div>
+  </div>
+    </div>
+  </div>
+  <button class="nav noselect left">
+    &lt;
+  </button>
+  <button class="nav noselect right">
+    &gt;
   </button>
 </div>
+    <div class="wrap"><h1>All/Unity/Js... Projects</h1>  </div>
+    <div class="wrap">
+    <button class="nav noselect bottom">
+    &#x25BC;
+    </button>
+    <button hidden class="nav noselect top"></button>
+  </div>
+
+
+
 
 </section>
 
@@ -209,7 +473,7 @@ maybe even ajoining a space for the marble
 
   </section>
 
-  <section class="bottomRightPage1">
+  <section class="bottomRightPage1 ">
     <!--<i class="fas fa-sort-up"></i>-->
 
 
@@ -225,7 +489,7 @@ maybe even ajoining a space for the marble
 
 
 
-    <section class="businessCard">
+    <section class="businessCard ">
 
 
 
@@ -343,7 +607,7 @@ changes to what it would of been if it had not been at an angle because of hover
 found didnt work here and didnt work on both
 in 4.3.1 need use order and offset
 -->
-  <section class="page3">
+  <section class="page3 ">
 
     <!--rows supposed to be in container dont know how to do this-->
 
