--- a/public/CSS/styles.css
+++ b/public/CSS/styles.css
@@ -49,7 +49,7 @@ yellow;
 
 .grayUntilJQueryLoads{
   position:absolute;
-  z-index:100;
+  z-index:11;
   background: #262626;
   width:200vw;
   height:200vh;
@@ -248,7 +248,7 @@ with page changes
   width: 120px;
   height: 70vh;
   position: absolute;
-  z-index: 86;
+  z-index: 8;
   right: -70px;
   /*to accommodate border something like this would be useful top: 50vh - 40px;*/
   top: 10vh;
@@ -274,7 +274,7 @@ with page changes
   position: absolute;
   bottom: -40px;
   left: -36px;
-  z-index: 80;
+  z-index: 7;
   /*-1;*/
   /*will this change to inherit*/
   width: inherit;
@@ -293,7 +293,7 @@ with page changes
   position: absolute;
   bottom: -40px;
   left: -40px;
-  z-index: 80;
+  z-index: 7;
   /*-1;*/
   /*if this is set to inherit the pattern moves as the object is stretched
   so width needs to match the maximum_size in the js*/
@@ -335,7 +335,7 @@ with page changes
       border-radius: 100px 0px 0px 100px;
   */
   overflow: hidden;
-  z-index: 90;
+  z-index: 9;/*90*/
 }
 
 .handle::before {
@@ -1113,6 +1113,7 @@ when refactor set the h's to the same font but different font sizes and have thi
   bottom: -200px;
   Left: -200px;
   opacity: 0;
+  z-index:9;
 }
 
 .corner-table {
@@ -1275,6 +1276,7 @@ when refactor set the h's to the same font but different font sizes and have thi
   border-radius: 5px;
 
 margin:0 auto;
+visibility:inherit;
 
 }
 .topRightProjectTechnologiesArea{
@@ -1369,6 +1371,7 @@ margin-right: auto;
 .cardHyperlinksArea{
 
    position:absolute; /*this positions not relative to aCard but container its in so needs to be block but if change it check everything else still works like pg4*/
+ content:""; position:block;
    bottom:4px;
   height:15px;
   width:auto;
@@ -1401,23 +1404,17 @@ vertical-align: top;
 a{
 
   display:inline-block;margin:0; padding:0;text-align: left; height:inherit;font-size:inherit;
-/*
+
   width:15px;
   height:15px;
-*/
+
 }
 /*Carousel Stylings*/
 
-.carouselOverlay{
-  position:fixed;
-  top:0; left:0;
-  width:100vw;
-  height:100vh;
-  margin:0;
-  padding:0;
-
-z-index:10;
+.carouselBlur{
+  filter:blur(5px);
 }
+
 .carouselOverlayBackground{
   height:inherit;
   width:inherit;
@@ -1428,18 +1425,173 @@ z-index:10;
   /*8*/
   /*tone down the yellow and blue and add grey from first page*/
 
-  background: repeating-linear-gradient(-35deg, rgba(129, 207, 224, 0.7), rgba(255, 255, 255, 0.9) 15%, rgba(254, 241, 96, 0.6) 20%) content-box;
+  background: repeating-linear-gradient(-35deg, rgba(129, 207, 224, 0.5), rgba(255, 255, 255, 0.7) 15%, rgba(254, 241, 96, 0.4) 20%), rgba(0, 0, 0, 0.6)  content-box;
   box-shadow: 0 0 100px rgba(0, 0, 0, 0.9), inset 0 0 50px rgba(0, 0, 0, 0.9);
   /*the blur is nice with the black edge (especially with the box shadow on it too)*/
   /*is not blurring the background behind though!*/
   outline: 8px solid black;
   outline-offset: -8px;
 
+
+}
+
+
+.carouselOverlay{
+  position:fixed;
+  top:0; left:0;
+  width:100vw;
+  height:100vh;
+  margin:0;
+  padding:0;
+
+
+z-index:10;
 }
 
 #carousel .cloud9-item, #buttons button {
   cursor: pointer;
 }
+
+.wrap {
+  width: 80vw; /* fixed width, centered in viewport */
+  left: -40vw;
+  margin-left: 50%;
+  position: relative;
+}
+.wrap > h1 {
+  font-size: 2.5em;
+  text-align: center;
+  padding-bottom: 3px;
+  color:black;
+}
+.nav {
+      width: 64px;
+      height: 134px;
+      color: #ccc;
+      font: bold 3em "Lucida Grande";
+      text-align: center;
+      text-shadow: 0px 1px 0px #f5f5f5;
+      background:rgba(254, 241, 96, 0.4); /*rgba(180, 180, 180, 0.5);*/
+      border: solid 2px rgba(0, 0, 0, 0.4);
+      -webkit-box-shadow: 0 0 9px 1px rgba(0, 0, 0, 0.45);
+      -moz-box-shadow: 0 0 9px 1px rgba(0, 0, 0, 0.45);
+      box-shadow: 0 0 9px 1px rgba(0, 0, 0, 0.45);
+      cursor: pointer;
+      position: absolute;
+      top: 33%;
+    }
+    .nav:active,
+    .nav.left.down {
+      background: rgba(255, 255, 255, 0.5);
+      border: solid 2px rgba(0, 0, 0, 0.5);
+    }
+    .nav.right.down {
+      background: rgba(255, 255, 255, 0.5);
+      border: solid 2px rgba(0, 0, 0, 0.5);
+    }
+    .nav.bottom.down {
+      font: bold 2em "Lucida Grande";
+      background: rgba(255, 255, 255, 0.5);/*not being overwritten by click*/
+      width: 201px;
+      height: 44px;
+      position:absolute;
+      display:block;
+      right:5vw;
+      color:red;
+      text-shadow:0px 1px 0px red;
+
+      -webkit-border-radius: 12px 5px 5px 12px;
+      -moz-border-radius: 12px 5px 5px 12px;
+      border-radius: 5px 5px 12px 12px;
+
+
+    }
+    .nav.left {
+      color:green;
+        text-shadow:0px 1px 0px green;
+      left: -43px;
+      -webkit-border-radius: 12px 5px 5px 12px;
+      -moz-border-radius: 12px 5px 5px 12px;
+      border-radius: 12px 5px 5px 12px;
+    }
+    .nav.right {
+
+      display:inline-block;
+        color:green;
+              text-shadow:0px 1px 0px green;
+        text-align: right;
+    padding-left: auto;
+    margin-left:auto;
+      right: -43px;
+      -webkit-border-radius: 5px 12px 12px 5px;
+      -moz-border-radius: 5px 12px 12px 5px;
+      border-radius: 5px 12px 12px 5px;
+}
+
+
+
+    .nav.bottom {
+      font: bold 2em "Lucida Grande";
+      background: rgba(221, 160, 221, 0.5);/*not being overwritten by click*/
+      width: 201px;
+      height: 44px;
+      position:absolute;
+      display:block;
+      right:5vw;
+      color:red;
+      text-shadow:0px 1px 0px red;
+
+      -webkit-border-radius: 12px 5px 5px 12px;
+      -moz-border-radius: 12px 5px 5px 12px;
+      border-radius: 5px 5px 12px 12px;
+    }
+
+.carouselDisplayNone{
+display:none; /*  visibility:hidden; /*need card to inherit and change the class name*/
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+#showcase {
+  visibility: hidden;
+}
+#showcase img {
+  cursor: pointer;
+}
+
+
+
+
+
+#showcase {
+  margin-top:5vh;
+  height: 70vh;
+ overflow: visible !important;
+  visibility:inherit; /*I added*/
+}
+.cloud9-item {
+  width: auto;
+height:auto;
+  padding: 0;
+  text-align: center;
+  background-color: rgba(61, 9, 9, 0.8);
+/*  position:absolute;
+display:inline-block;added*/
+}
+
+/*Carousel Stylings*/
+
+
 
 
 
@@ -1457,7 +1609,11 @@ z-index:10;
   background-color:blue;
 }
 
-
+.test{
+  z-index: 1000;
+  display:block;
+  position:fixed;
+}
 
 
 
