--- a/views/myWebsite.ejs
+++ b/views/myWebsite.ejs
@@ -77,7 +77,29 @@ maybe making it inline but not sure thats really the issues
 also cause a white space at bottom because now contributes to the height-->
   <!--wheren section has content it tries to be part of initial view screen-->
 
+  <template id="cloud9CardTemplate">
+    <div class="cloud9-item">
+                              <div class="aCard">
+                                <div class="topRightProjectTechnologiesArea">
+          <form class="formTechBtn" action="/carousel" method="get">
+            <button class="submitButtonNoStyle" type="submit" name="techButton" value="" >
+                                                                  <Img class="cardHyperlinksImg" src= "" alt="gitLink">
+    </button>
+    </form>
+                                        </div>
 
+                                <div class="aCardWritingArea">
+                                      <div class="projectTitle">"TEMPLATE!!!!!"</div>
+                                              <img class="projectImage " src="" alt="projectImg">
+                                       <div class="projectDescriptionSubtitle">TEMPLATE!!!!!!!!</div>
+                                       <div class="projectDescriptionText">TEMPLATE!!!!!!!!!!!!!!!</div>
+                                  </div>
+                                   <div class="cardHyperlinksArea">
+                                         <a href="j"> <Img class="cardHyperlinksImg"  alt="gitLink"> </a>
+                                    </div>
+                        </div>
+    </div>
+  </template>
 <section class="carouselOverlay  carouselDisplayNone"   > <!--carouselDisplayNone causes the cards to be in wrong place-->
 
   <div class="carouselOverlayBackground"></div>
@@ -85,6 +107,7 @@ also cause a white space at bottom because now contributes to the height-->
 
 <div class="wrap">
   <div id="showcase" class="noselect">
+
     <div class="cloud9-item">
                               <div class="aCard">
                                 <div class="topRightProjectTechnologiesArea">
@@ -353,6 +376,12 @@ also cause a white space at bottom because now contributes to the height-->
     </button>
     <button hidden class="nav noselect top"></button>
   </div>
+
+
+
+
+
+
 
 
 
